added display driver for LILYGO T5 V2.3 device + show QRcode for fast Wifi login

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,6 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 2000000
 
+lib_deps = ricmoo/QRCode@^0.0.1
+    Adafruit GFX Library@1.7.5
+    https://github.com/lewisxhe/GxEPD
